--- a/html/portfolio/style.css
+++ b/html/portfolio/style.css
@@ -103,6 +103,38 @@ section{
     gap: 10vw;;
     
 }
+.welcome-section h2{
+    font-size: 2.5em;
+}
+
+@keyframes wiggle{
+    0%{
+        transform: translateX(5px);
+        transform: translateY(10px);
+
+    }
+    25%{
+        transform: translateX(10px);
+        transform: translateY(-5px);
+
+    }
+    50%{
+        transform: translateX(-5px);
+        transform: translateY(10px);
+
+    }
+    75%{
+        transform: translateX(-10px);
+        transform: translateY(-5px);
+    }
+    
+    100%{
+        transform: translateX(5px);
+        transform: translateY(10px);
+    }
+
+}
+
 .img-pfp{
     background-image: url('images/mohannad_pic.jpg');
     background-position: center;
@@ -114,6 +146,11 @@ section{
     border: var(--primary) 4px solid;
     box-shadow: 20px 40px 0 var(--primary);
     transition: background-image 0.2s ease-out;
+    animation-name: wiggle;
+    animation-duration: 5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: forward;
     
 }
 .img-pfp:hover{
@@ -150,7 +187,11 @@ section{
     margin-right: auto;
     box-shadow: 0px 0px 40px var(--secondary);
    
-
+    animation-name: wiggle;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: forward;
   
 }
 
@@ -187,6 +228,12 @@ h4{
     border: 4px solid var(--primary);
     box-shadow: 0px 0px 40px var(--secondary);
     border-radius: 20px;
+
+    animation-name: wiggle;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: forward;
 }
 .exp-section ol li::after{
     content: '';
@@ -224,18 +271,72 @@ footer{
     padding-left: 1em;
 }
 
+
+
 .hidden{
     opacity: 0;
-    transform: translateX(-100%) ;
-    transition:all 0.5s ease;
+    transform: translateX(-30%) ;
+    transition:all 1s ease;
 }
 
-.hidden:nth-child(2){
-    transition-delay: 0.5s;
-}
+
 
 .show{
     opacity: 1;
     transform: translateX(0);
 }
 
+.animated-text{
+    position: relative;
+}
+
+.animated-text::before{
+    content: "Programmer";
+    color: #07cdff;
+    animation: words 20s infinite;
+}
+
+.animated-text::after{
+    content: "";
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    background-color: var(--accent);
+    border-left: 2px solid #07cdff;
+    right: -8px;
+    animation: cursor .8s infinite, typing 20s steps(9) infinite;
+}
+
+@keyframes cursor {
+    to{
+        border-left: 2px solid var(--accent);
+    }
+}
+
+@keyframes words {
+    0%,20%{
+        content: "Student";
+    }
+    21%,40%{
+        content: "Learner";
+    }
+    41%,60%{
+        content: "Developer";
+    }
+    61%,80%{
+        content: "Designer";
+    }
+    81%,100%{
+        content: "Programmer";
+    }
+}
+
+@keyframes typing {
+    10%,15%,30%,35%,50%,55%,70%,75%,90%,95%{
+        width: 0;
+    }
+    5%,20%,25%,40%,45%,60%,65%,80%,85%{
+        width: calc(100% + 8px);
+    }
+
+}
