--- a/html/portfolio/style.css
+++ b/html/portfolio/style.css
@@ -3,7 +3,8 @@
     --primary: #021526;
     --secondary: #E2E2B6;
     --background2:#0068b8;
-    background-color: var(--primary);
+    --gradient: linear-gradient( to bottom left, var(--background2), var(--accent));
+    background: linear-gradient( 35deg ,var(--primary) 40%, #002d55);
     color:var(--secondary);
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -172,19 +173,21 @@ section{
     font-size: 1.5em;
     height: 120vh;
     place-items: center;
-    
+    width: 60vw;
    
     animation: appear linear;
     animation-timeline: view();
     animation-range: entry 0;
+    
 }
 
 .education-list li img{
    
-   width: 300px;
-   height: 300px;
-   object-fit: cover;
-   margin-left: 20px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin-right: 40px;
+    margin-left: 40px;
    border: 4px solid var(--secondary);
     border-radius: 20px;
     margin-left: auto;
@@ -196,11 +199,12 @@ section{
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: forward;
+    z-index: 10;
   
 }
 
 .exp-section{
-    background-color: var(--background2);
+    background: var(--gradient);
 }
 
 .exp-section ol li{
@@ -213,6 +217,7 @@ section{
     position: relative;
     font-size: 1.5em;
     height: 100vh;
+    width: 60vw;
     
 }
 h3{
@@ -224,11 +229,11 @@ h4{
     margin-bottom: 1em;
 }
 .exp-section ol li img{
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 40px;
+    margin-left: 40px;
     border: 4px solid var(--primary);
     box-shadow: 0px 0px 40px var(--secondary);
     border-radius: 20px;
@@ -243,7 +248,7 @@ h4{
     content: '';
     background-color: var(--accent);
     height: 0.5px;
-    width: 80vw;
+    width: 60vw;
     position: absolute;
     bottom : -40px;
 }
@@ -254,9 +259,12 @@ h4{
 }
 .projects-section ol{
     list-style: none;
+    width: 60vw;
+
 }
 .projects-section ol li{
     height: 100vh;
+    
     place-content: center;
     display: grid;
     grid-template-columns: 4fr 6fr;
@@ -277,11 +285,18 @@ footer{
 
 
 
-.hidden{
+.hidden-left{
     opacity: 0;
     transform: translateX(-30%) ;
-    transition:all 1s ease;
+    transition:all 0.8s ease-out;
 }
+.hidden-right{
+    opacity: 0;
+    transform: translateX(30%) ;
+    transition:all 0.8s ease-out;
+}
+
+
 
 
 
@@ -290,8 +305,9 @@ footer{
     transform: translateX(0);
 }
 
+
 .animated-text{
-    position: relative;
+    position: relative; 
 }
 
 .animated-text::before{
