--- a/html/Plants-store/style.css
+++ b/html/Plants-store/style.css
@@ -1,65 +1,131 @@
-
 :root{
     --night: #01140fff;
     --castleton-green: #03634aff;
     --hookers-green: #477166ff;
     --white: #fcfcfcff;
-    font-size: 18px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --slide-width:80rem;
 }
 *{
-    text-decoration: none;
     margin: 0;
     padding: 0;
+    text-decoration: none;
     color: var(--white);
-    
+    list-style: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
-    background-color: var(--night);
-    width: 100%;
+    background: linear-gradient(to right , var(--night)  , var(--castleton-green) 200%) ;
+}
+.sticky{
+    position: sticky;
+    top: 0;
+}
+.nav-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 10px;
+}
+.logo{
+    width: 100px;
+    height: 50px;
+    object-fit: cover;
+    z-index: 10;
 
 }
-
-.small-screen{
-    display: none;
-}
-.big-screen{
-    display: block;
-}
-
-@media(max-width:600px) {
-    .small-screen{
-        display: block;
-    }
+.website-name-container{
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    padding: 10px 20px 10px 10px;
+    margin :10px;
+    position: sticky;
+    z-index: 10;
     
-    .big-screen{
-        display: none;
-        left:0 ;
-    }
+}
+.website-name-container h1{
+    color: var(--white);
+    font-size: 2.5rem;
+    font-family: "Pattaya", sans-serif;
+    font-weight: 400;
+    font-style:normal;
+    z-index: 11;
+    
 }
 
 .top-nav-bar{
-    width: 100%;
-    height: 60px;
-    background-color: var(--castleton-green);
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    align-content: center;
+    position: relative;
+    
+    width: fit-content;
+    height: fit-content;
+    
 }
-.website-name{
-    align-content: center;
-    margin-left: 20px;
-    font-weight: bold;
-    font-size: 2em;
-
-}
-.top-nav-bar ul{
+.top-nav-container{
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 10%;
-    align-items: center;
-    list-style: none;
-    margin-right: 10px;
+    gap: 15px;
+    padding: 5px;
+    margin: 10px;
+    
 
 }
+.nav-item{
+    font-size: 1.4rem;
+    transition: all 0.2s ease-in;
+    border-radius: 20px;
+    padding: 10px 15px;
+    background-color: rgb(0,0,0,0);
+    z-index: 10;
+}
+.nav-item:hover, .nav-item.active {
+    background-color: var(--night);
+    scale: 1.1;
+}
+.active:hover{
+    background-color: var(--castleton-green);
+}
+
+.website-name-container .header-bg, .top-nav-bar .header-bg{
+    background-color: var(--castleton-green);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: .95;
+    backdrop-filter: blur(2px) ;
+    box-shadow: 0 0 1em 0.1em var(--night);
+    border: var(--night) 1px solid;
+    border-radius: 20px;
+}
+.image-slider{
+    padding:2rem;
+}
+.slider-wrapper{
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+}
+.slider{
+    display: flex;
+    aspect-ratio: 16/9;
+    scroll-snap-type: y mandatory;
+    overflow-y: hidden;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    border-radius:8px;
+    box-shadow: 0 1.5rem 3rem -0.75rem rgb(0,0,0,0.25);
+    
+}
+.slide{
+    max-width: 48rem;
+}
+.slide img{
+    
+    width: 48rem;
+    
+    object-fit: cover;
+    object-position: center;
+    
+    height: 100%;
+}
+
